# ai-news-analyst

./: .env.example  .gitignore  README.md  pyproject.toml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: enum_serialization_benefits.md  strenum_migration.md
scripts/: enhanced_enum_demo.py  enum_demo.py  verify_issue1.py  verify_issue2.py
src/: __init__.py
src/news_analyst/: __init__.py  config.py
src/news_analyst/agents/: __init__.py
src/news_analyst/models/: __init__.py  analysis.py  article.py  base.py  fact_check.py  news_source.py
src/news_analyst/scrapers/: __init__.py
tests/: test_setup.py
tests/unit/: test_models.py
